# mio

./: .gitignore  .travis.yml  Makefile  Makefile.am  autogen.sh  configure.ac  fio.c  main.c  mio.pc.in
docs/reference/: Makefile.am
docs/reference/mio/: Makefile.am  mio-docs.sgml  mio-sections.txt
fio/: Makefile.am  fio.c  fio.h
mio/: Makefile.am  mio-file.c  mio-memory.c  mio.c  mio.h
tests/: Makefile.am  main.c
